@@ -5,6 +5,7 @@
 * Renamed adytum to txjsonrpc.
 * Moved web and web2 up and renamed twisted to netstring.
 * Removed .pyc files.
+* Tweaked the commit script.
 
 2006.05.07
 
